@@ -6,6 +6,7 @@ master
   Added new button '4chan Pass' for quick access to the authentication.
   Renamed 'Optional Increase' to 'Dynamic Increase'.
   Renamed 'QI only on index' to 'Quote Inline on index'.
+  Replaced 'Dismiss/Detain' with new Option called 'Unhide Announcement'.
 
 2.38.5
 - Mayhem
